--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "node-jsencrypt": "^1.0.0",
